# alc-app-s3

./: .gitignore  Cargo.toml  README.md  coverage_100.toml  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml
components/: VENDOR.md
components/M5HAL/src/: M5HAL.hpp
components/M5HAL/src/m5_hal/: platform_checker.hpp
components/M5HAL/src/m5_hal/bus/: bus.hpp  i2c.inl
components/M5Unit-NFC/: .gitignore  CMakeLists.txt  README.md  idf_component.yml
components/M5Unit-NFC/src/: M5UnitUnifiedNFC.hpp
components/M5Unit-NFC/src/nfc/: manufacturer_id.hpp  nfc.hpp
components/M5Unit-NFC/src/nfc/a/: mifare.cpp  mifare.hpp  nfca.cpp  nfca.hpp
components/M5Unit-NFC/src/nfc/apdu/: apdu.cpp  apdu.hpp
components/M5Unit-NFC/src/nfc/b/: nfcb.cpp  nfcb.hpp
components/M5Unit-NFC/src/nfc/crypto/: aes.cpp  mifare_classic_crypto1.hpp  secure_zero.hpp
components/M5Unit-NFC/src/nfc/f/: nfcf.cpp  nfcf.hpp
components/M5Unit-NFC/src/nfc/isoDEP/: desfire_file_system.cpp  desfire_file_system.hpp  file_system.cpp  file_system.hpp  isoDEP.cpp  isoDEP.hpp  nfc_b_file_system.hpp
components/M5Unit-NFC/src/nfc/layer/: ndef_layer.cpp  ndef_layer.hpp  nfc_layer.hpp
components/M5Unit-NFC/src/nfc/layer/a/: emulation_layer_a.cpp  emulation_layer_a.hpp  nfc_layer_a.cpp  nfc_layer_a.hpp
components/M5Unit-NFC/src/nfc/layer/b/: nfc_layer_b.cpp  nfc_layer_b.hpp
components/M5Unit-NFC/src/nfc/layer/f/: emulation_layer_f.cpp  emulation_layer_f.hpp  emulation_layer_f_ST25R3916.cpp  nfc_layer_f.cpp  nfc_layer_f.hpp
components/M5Unit-NFC/src/nfc/layer/v/: nfc_layer_v.cpp  nfc_layer_v.hpp
components/M5Unit-NFC/src/nfc/ndef/: ndef.hpp  ndef_record.cpp  ndef_record.hpp  ndef_tlv.cpp  ndef_tlv.hpp
components/M5Unit-NFC/src/nfc/v/: nfcv.cpp  nfcv.hpp
components/M5Unit-NFC/src/unit/: ST25R3916_definition.hpp  unit_ST25R3916.cpp  unit_ST25R3916.hpp  unit_ST25R3916_nfca.cpp  unit_ST25R3916_nfcb.cpp  unit_ST25R3916_nfcf.cpp  unit_ST25R3916_nfcv.cpp  unit_ST25R3916_util.cpp
components/M5Utility/: CMakeLists.txt
components/nfc_shim/: CMakeLists.txt  nfc_shim.cpp
components/nfc_shim/include/: nfc_shim.h
crates/atoms3-nfc/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
crates/atoms3-nfc/src/: main.rs
crates/atoms3-print/: Cargo.toml  partitions.csv  sdkconfig.defaults
crates/atoms3-print/src/: console.rs  display.rs  main.rs
crates/hub-ble/: Cargo.toml
crates/hub-ble/src/: lib.rs
crates/hub-board/: Cargo.toml
crates/hub-board/src/: display.rs  lib.rs  power.rs  touch.rs
crates/hub-common/: Cargo.toml  build.rs
crates/hub-common/src/: config.rs  control.rs  lib.rs  measurement.rs  settings.rs  status.rs  ui_api.rs  wdt.rs
crates/hub-core/: Cargo.toml
crates/hub-core/src/: cfg.rs  clock.rs  coex.rs  crashlog.rs  device.rs  fc1200.rs  gw.rs  ieee11073.rs  improv.rs  layout.rs  lib.rs  pairing.rs  printer.rs  protocol.rs  uplink.rs  vitals.rs  wdt_gate.rs
crates/hub-core/tests/: firmware_wiring.rs
crates/hub-drivers/: Cargo.toml  build.rs
crates/hub-drivers/assets/: touroku_kanryo_16k_s16le.raw  touroku_kanryo_24k_s16le.raw
crates/hub-drivers/src/: auth_link.rs  ble.rs  crashlog.rs  eth_w5500.rs  gw_link.rs  heap.rs  host_link.rs  improv.rs  lan.rs  lib.rs  nfc.rs  ntp.rs  ota.rs  printer.rs  recorder.rs  rs232.rs  speaker.rs  ui_api.rs  wifi.rs  ws_uplink.rs
crates/hub-drivers/src/board/: display.rs  power.rs
crates/hub-ui/: Cargo.toml
crates/hub-ui/src/: lib.rs  screens.rs
crates/hub-wifi/: Cargo.toml
crates/hub-wifi/src/: improv.rs  lib.rs  wifi.rs
docs/: atoms3-print.html  index.html  manifest-atoms3-print.json  manifest.json  plan-ws-print.md
plan/: cores3-hub-consolidation.md  nfc-card-identity.md
scripts/: check_coverage_100.sh  nfc_serial_beep.py
src/: ble.rs  config.rs  host_link.rs  lan.rs  main.rs  rs232.rs  settings.rs  status.rs  wifi.rs
src/board/: display.rs  mod.rs
src/ui/: mod.rs  screens.rs
