[workspace]
members = [
    "crates/atoms3-print",
    "crates/hub-ble",
    "crates/hub-board",
    "crates/hub-common",
    "crates/hub-core",
    "crates/hub-drivers",
    "crates/hub-ui",
    "crates/hub-wifi",
]

[package]
name = "alc-hub-cores3"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"
description = "M5Stack CoreS3 統合ハブ ファームウェア (画面処理) — alc-app 点呼キオスク向け"

[[bin]]
name = "alc-hub-cores3"
harness = false

[features]
# 開発用メモリ HUD (ステータスバーに RAM/PSRAM 使用率、hub-ui に伝搬)。
# 本番ビルドには入れない。有効化: cargo build --release --features mem-hud
# (local/flash.ps1 が付与する)
mem-hud = ["alc-hub-ui/mem-hud"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
alc-hub-ble = { path = "crates/hub-ble" }
alc-hub-board = { path = "crates/hub-board" }
alc-hub-common = { path = "crates/hub-common" }
alc-hub-drivers = { path = "crates/hub-drivers" }
alc-hub-ui = { path = "crates/hub-ui" }
alc-hub-wifi = { path = "crates/hub-wifi" }
anyhow = "1"
log = "0.4"
# ble-medical-gateway firmware-rust (esp32-nimble 0.12) とバージョンを揃える
esp-idf-svc = { version = "0.52", default-features = false, features = [
    "native",
    "std",
    "alloc",
    "binstart",
] }

[build-dependencies]
embuild = "0.33"

# WS 送信 (#21): ESP-IDF の managed component (esp_websocket_client) を追加する。
# esp-idf-svc の ws::client はこの component が有効な場合のみコンパイルされる
# (cfg: esp_idf_comp_espressif__esp_websocket_client_enabled)
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "^1.5" }
