[workspace]
members = [
    "crates/atoms3-nfc",
    "crates/atoms3-print",
    "crates/hub-ble",
    "crates/hub-board",
    "crates/hub-common",
    "crates/hub-core",
    "crates/hub-drivers",
    "crates/hub-ui",
    "crates/hub-wifi",
]

[package]
name = "alc-hub-cores3"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"
description = "M5Stack CoreS3 統合ハブ ファームウェア (画面処理) — alc-app 点呼キオスク向け"

[[bin]]
name = "alc-hub-cores3"
harness = false

[features]
# 開発用メモリ HUD (ステータスバーに RAM/PSRAM 使用率、hub-ui に伝搬)。
# 本番ビルドには入れない。有効化: cargo build --release --features mem-hud
# (local/flash.ps1 が付与する)
mem-hud = ["alc-hub-ui/mem-hud"]
# NFC 検証 (Unit NFC / ST25R3916, issue #84 + plan/nfc-card-identity.md)。
# components/nfc_shim 経由の C++ FFI を使う。dev(mem-hud) チャネルのみに相乗りし
# 本番 manifest.json の -app.bin には含めない (.github/workflows/build.yml 参照)
nfc-verify = ["alc-hub-drivers/nfc-verify"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
alc-hub-ble = { path = "crates/hub-ble" }
alc-hub-board = { path = "crates/hub-board" }
alc-hub-common = { path = "crates/hub-common" }
alc-hub-drivers = { path = "crates/hub-drivers" }
alc-hub-ui = { path = "crates/hub-ui" }
alc-hub-wifi = { path = "crates/hub-wifi" }
anyhow = "1"
log = "0.4"
# ble-medical-gateway firmware-rust (esp32-nimble 0.12) とバージョンを揃える
esp-idf-svc = { version = "0.52", default-features = false, features = [
    "native",
    "std",
    "alloc",
    "binstart",
] }

[build-dependencies]
embuild = "0.33"

# WS 送信 (#21): ESP-IDF の managed component (esp_websocket_client) を追加する。
# esp-idf-svc の ws::client はこの component が有効な場合のみコンパイルされる
# (cfg: esp_idf_comp_espressif__esp_websocket_client_enabled)
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "^1.5" }

# NFC 検証 (nfc-verify feature): components/ 配下に vendor した M5Unit-NFC 系4ライブラリ +
# 自作シム (nfc_shim) をローカル ESP-IDF component として取り込む。ESP Component Registry
# には未登録のため (相互 git 依存で解決する形態)、手動 vendor 方式を取る
# (components/VENDOR.md に取得元コミット記録)。component 自体は feature 非依存で
# 常時ビルド・リンクされる (呼ばれない dead code として prod にも同梱される点に注意)
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
