[package]
name = "alc-hub-ble"
version = "0.1.0"
edition = "2021"
description = "BLE central: ニプロ体温計 NT-100B / 血圧計 NBP-1BLE の読み取り (ble-medical-gateway 移植)"

[dependencies]
alc-hub-core = { path = "../hub-core" }
alc-hub-common = { path = "../hub-common" }
anyhow = "1"
log = "0.4"
esp-idf-svc = { version = "0.52", default-features = false, features = [
    "native",
    "std",
    "alloc",
    "binstart",
] }
esp32-nimble = "0.12"
