[package]
name = "alc-hub-drivers"
version = "0.1.0"
edition = "2021"
description = "ホストリンク (USB CDC 行プロトコル + Improv 振り分け) / RS232 (FC-1200) / LAN スタブ"

[features]
# Unit NFC (ST25R3916) 検証 (issue #84)。ルート components/nfc_shim の extern "C" を呼ぶ
nfc-verify = []

[dependencies]
alc-hub-core = { path = "../hub-core" }
alc-hub-common = { path = "../hub-common" }
alc-hub-wifi = { path = "../hub-wifi" }
anyhow = "1"
log = "0.4"
# ota.rs: OTA スレッドの stack_alloc_caps (PSRAM 指定) 用。esp-idf-hal 経由の
# 既存の間接依存と同じバージョン系列 (Cargo.lock 参照)
enumset = "1"
esp-idf-svc = { version = "0.52", default-features = false, features = [
    "native",
    "std",
    "alloc",
    "binstart",
] }

[build-dependencies]
embuild = "0.33"
