[package]
name = "alc-hub-wifi"
version = "0.1.0"
edition = "2021"
description = "Wi-Fi STA 管理 + Improv Wi-Fi Serial ハンドラ"

[dependencies]
alc-hub-core = { path = "../hub-core" }
alc-hub-common = { path = "../hub-common" }
anyhow = "1"
log = "0.4"
esp-idf-svc = { version = "0.52", default-features = false, features = [
    "native",
    "std",
    "alloc",
    "binstart",
] }
